fix: leaflet-control font-size too small

--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -18,5 +18,5 @@ body {
 }
 
 .leaflet-control-attribution {
-  font-size: 1.5em;
+  font-size: 1.75em;
 }
